--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -8,7 +8,7 @@
         <p>Welcome to Eclipse <b>SUMO</b> (Simulation of Urban MObility), an open source, highly portable, microscopic and continuous multi-modal traffic simulation package designed to handle large networks.</p>
 
       <p><div class="btn-group">
-        <a href="https://sumo.sourceforge.net/releases/{{ $.Site.Params.Version }}/sumo-win64-{{ $.Site.Params.Version }}.msi" id="download-button" type="button" class="btn btn-success" style="-webkit-appearance: none; box-shadow: 0 8px 36px -3px rgba(20,45,100,.35);">SUMO {{ $.Site.Params.Version }} for Windows 64-bit</a>
+        <a href="https://sumo.dlr.de/releases/{{ $.Site.Params.Version }}/sumo-win64-{{ $.Site.Params.Version }}.msi" id="download-button" type="button" class="btn btn-success" style="-webkit-appearance: none; box-shadow: 0 8px 36px -3px rgba(20,45,100,.35);">SUMO {{ $.Site.Params.Version }} for Windows 64-bit</a>
         <button type="button" class="btn btn-success dropdown-toggle dropdown-toggle-split" data-toggle="dropdown"><span class="caret"></span></button>
         <div class="dropdown-menu download-menu">
           <a class="dropdown-item" href="{{ $.Site.Params.docsURL }}/Downloads.php#sources"><i class="fas fa-file-code"></i> Sources</a>
@@ -31,7 +31,7 @@
   var DownloadLink = "{{ $.Site.Params.docsURL }}/Downloads.php";
   if (navigator.appVersion.indexOf("Win") != -1) {
     Name = "SUMO {{ $.Site.Params.Version }} for Windows 64-bit";
-    DownloadLink = "https://sumo.sourceforge.net/releases/{{ $.Site.Params.Version }}/sumo-win64-{{ $.Site.Params.Version }}.msi";
+    DownloadLink = "https://sumo.dlr.de/releases/{{ $.Site.Params.Version }}/sumo-win64-{{ $.Site.Params.Version }}.msi";
     }
   if (navigator.appVersion.indexOf("Mac") != -1) {
     Name =  "SUMO {{ $.Site.Params.Version }} for macOS";
@@ -251,7 +251,7 @@
             <i class="fas fa-tachometer-alt fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="feature-heading">Performance</h4>
-          <p class="text-muted">Boost your simulation with an unlimited network size, an unlimited amount of simulated vehicles and an unlimited simulation time<a href="https://sumo.sourceforge.net/docs/FAQ.html#are_there_any_limits_in_regard_to_the_size_of_a_simulation_scenario">*</a></p>
+          <p class="text-muted">Boost your simulation with an unlimited network size, an unlimited amount of simulated vehicles and an unlimited simulation time<a href="https://sumo.dlr.de/docs/FAQ.html#are_there_any_limits_in_regard_to_the_size_of_a_simulation_scenario">*</a></p>
         </div>
 
         <div class="col-md-4">
