--- a/themes/sumo-theme/layouts/_default/baseof.html
+++ b/themes/sumo-theme/layouts/_default/baseof.html
@@ -1,3 +1,4 @@
+{{ "<!-- Last edit:" | safeHTML }} {{ .Lastmod.Format "January 2, 2006" }} {{ "-->" | safeHTML }}
 <!DOCTYPE html>
 <html lang="en">
     {{- partial "head.html" . -}}
