disabling "last edit" date - due to eclipse infrastructure fail

--- a/themes/sumo-theme/layouts/_default/baseof.html
+++ b/themes/sumo-theme/layouts/_default/baseof.html
@@ -1,4 +1,4 @@
-{{ "<!-- Last edit:" | safeHTML }} {{ .Lastmod.Format "January 2, 2006" }} {{ "-->" | safeHTML }}
+<!-- {{ "<!-- Last edit:" | safeHTML }} {{ .Lastmod.Format "January 2, 2006" }} {{ "-->" | safeHTML }} -->
 <!DOCTYPE html>
 <html lang="en">
     {{- partial "head.html" . -}}
