updating the agenda

--- a/src/themes/sumo-theme/layouts/index.html
+++ b/src/themes/sumo-theme/layouts/index.html
@@ -123,7 +123,7 @@
         <a class="btn btn-light" href="{{ `contact` | absURL }}" aria-label="contact"><span class="fas fa-envelope"></span></a>
       </div>
 
-      <a href="{{ `conference` | absURL }}" class="text-decoration-none" style="color: inherit">
+<!--       <a href="{{ `conference` | absURL }}" class="text-decoration-none" style="color: inherit">
         <div class="card">
           <div class="card-header">
             <img src="{{ `images/banner_2023.png` | absURL }}" style="width: 100%">
@@ -139,7 +139,7 @@
         let current_date = new Date();
         var remainingDays = Math.ceil((conference_date.getTime() - current_date.getTime()) / (1000 * 3600 * 24));
         document.getElementById("remaining-days").innerHTML = remainingDays;
-      </script>
+      </script> -->
 
     </div>
   </div>
