--- a/src/themes/sumo-theme/layouts/partials/footer.html
+++ b/src/themes/sumo-theme/layouts/partials/footer.html
@@ -47,7 +47,7 @@
                   <div class="col-md text-left"><b>Community</b>
                     <ul class="ul-no-bullet">
                       <li><a href="{{ `contact` | absURL }}">Mailing lists</a></li>
-                      <li><a href="https://mattermost.eclipse.org/eclipse/channels/sumo">Mattermost channel</a></li>
+                      <li><a href="https://matrix.to/#/#automotive.sumo:matrix.eclipse.org">Matrix room</a></li>
                       <li><a href="{{ `conference` | absURL }}">SUMO User Conference</a></li>
                       <li><a href="https://openmobility.eclipse.org/">openMobility Working Group</a></li>
                     </ul>
