new repository url

--- a/src/themes/sumo-theme/layouts/index.html
+++ b/src/themes/sumo-theme/layouts/index.html
@@ -20,9 +20,9 @@
     <br><a href="{{ $.Site.Params.docsURL }}/Downloads.php#sumo_-_latest_development_version" class="green-text"><small>Latest Development Version (Nightly Snapshots) <i class="fas fa-angle-right"></i></small></a>
     <br><a href="https://sourceforge.net/projects/sumo/files/sumo/" class="green-text"><small>Older releases <i class="fas fa-angle-right"></i></small></a></p>
 
-    <a class="github-button" href="https://github.com/eclipse/sumo" data-size="large" class="btn btn-social-icon btn-lg btn-github"><span class="fab fa-github"> View on GitHub</span></a>
-    <a class="github-button" href="https://github.com/eclipse/sumo" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star eclipse/sumo on GitHub">Star</a>    
-    <a class="github-button" href="https://github.com/eclipse/sumo/fork" data-icon="octicon-repo-forked" data-size="large" data-show-count="true" aria-label="Fork eclipse/sumo on GitHub">Fork</a>
+    <a class="github-button" href="https://github.com/eclipse-sumo/sumo" data-size="large" class="btn btn-social-icon btn-lg btn-github"><span class="fab fa-github"> View on GitHub</span></a>
+    <a class="github-button" href="https://github.com/eclipse-sumo/sumo" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star eclipse/sumo on GitHub">Star</a>    
+    <a class="github-button" href="https://github.com/eclipse-sumo/sumo/fork" data-icon="octicon-repo-forked" data-size="large" data-show-count="true" aria-label="Fork eclipse/sumo on GitHub">Fork</a>
 <div class="d-md-none" style="margin-top:30px;"></div> <!-- to separate text from screenshots-->
 </div><!-- end first col -->
 
@@ -115,7 +115,7 @@
     <div class="col-md-4">
       <div class="d-md-none" style="margin-top: 14px;"></div>
       <div class="btn-group btn-group-lg" style="width: 100%; margin-bottom: 10px;">
-        <a class="btn btn-light" href="https://github.com/eclipse/sumo" aria-label="GitHub"><span class="fab fa-github"></span></a>
+        <a class="btn btn-light" href="https://github.com/eclipse-sumo/sumo" aria-label="GitHub"><span class="fab fa-github"></span></a>
         <a class="btn btn-light" href="https://twitter.com/eclipsesumo" aria-label="X"><span class="fab fa-x-twitter"></span></a>
         <a class="btn btn-light" href="https://facebook.com/simulationofurbanmobility" aria-label="Facebook"><span class="fab fa-facebook"></span></a>
         <a class="btn btn-light" href="https://instagram.com/eclipse.sumo" aria-label="Instagram"><span class="fab fa-instagram"></span></a>
