--- a/src/themes/sumo-theme/layouts/partials/footer.html
+++ b/src/themes/sumo-theme/layouts/partials/footer.html
@@ -37,8 +37,8 @@
                     <ul class="ul-no-bullet">
                       <li><a href="https://projects.eclipse.org/projects/automotive.sumo/who">Who's involved</a></li>
                       <li><a href="https://sumo.dlr.de/daily/">Status of daily build and tests</a></li>
-                      <li><a href="https://www.github.com/eclipse/sumo">GitHub repository</a></li>
-                      <li><a href="https://www.github.com/eclipse/sumo.website">Website GitHub repository</a></li>
+                      <li><a href="https://www.github.com/eclipse-sumo/sumo">GitHub repository</a></li>
+                      <li><a href="https://www.github.com/eclipse-sumo/sumo.website">Website GitHub repository</a></li>
                       <li><a href="https://sourceforge.net/projects/sumo/">SourceForge</a></li>
                       <li><a href="https://dlr.de/ts/en/sumo">SUMO @ DLR</a></li>
                       <li><a href="https://projects.eclipse.org/projects/automotive.sumo">SUMO @ Eclipse</a></li>
@@ -60,7 +60,7 @@
                     <li><a href="{{ $.Site.Params.docsURL }}/Developer/index.html">Developer Documentation</a></li>
                     <li><a href="https://sumo.dlr.de/daily/doxygen/">Doxygen Documentation</a></li>
                     <li><a href="{{ $.Site.Params.docsURL }}/Tutorials/index.html">Tutorials</a></li>
-                    <li><a href="https://github.com/eclipse/sumo/issues">Issue Tracking</a></li>
+                    <li><a href="https://github.com/eclipse-sumo/sumo/issues">Issue Tracking</a></li>
                     </ul>
                   </div>
                   <div class="col-md text-left"><b>Eclipse Foundation</b>
