--- a/src/themes/sumo-theme/layouts/_default/baseof.html
+++ b/src/themes/sumo-theme/layouts/_default/baseof.html
@@ -7,8 +7,30 @@
         {{- partial "header.html" . -}}
         <div id="content">
         {{- block "main" . }}{{- end }}
+        <div aria-live="polite" aria-atomic="true" style="position: fixed ; bottom: 0; right: 10px; z-index: 1050; min-height: 250px;">
+            <div id="survey_notice" class="toast" data-autohide="false" >
+              <div class="toast-header">
+                <i class="fa-regular fa-face-smile"></i>
+                <strong class="ml-2 mr-auto">Provide feedback!</strong>
+                <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="toast-body">
+                We would love to hear your feedback! Participate in our short survey (only three questions) <a href="https://docs.google.com/forms/d/e/1FAIpQLSfMkTlWJnyF5GbcmIuHxn5xSuwOJSVN1iqzqiOfuLZ1_evW-A/viewform">here</a>.
+                <br><br>
+                Thanks!
+              </div>
+            </div>
+          </div>
         </div>
         {{- partial "footer.html" . -}}
+
+
+
+<script>
+$('#survey_notice').toast('show');
+</script>
 
     </body>
 </html>
