cfp notice on the start page

--- a/src/themes/sumo-theme/layouts/index.html
+++ b/src/themes/sumo-theme/layouts/index.html
@@ -130,7 +130,7 @@
           </div>
           <div class="card-body text-center">
             <!-- <strong id="remaining-days"></strong> days remaining -->
-            Save the date!
+            Check out the Call for Papers <a href="{{ `conference` | absURL }}">here</a>.
           </div>
         </div>
       </a>
