adding 2024 submission link + removing feedback toast

--- a/src/themes/sumo-theme/layouts/_default/baseof.html
+++ b/src/themes/sumo-theme/layouts/_default/baseof.html
@@ -7,7 +7,7 @@
         {{- partial "header.html" . -}}
         <div id="content">
         {{- block "main" . }}{{- end }}
-        <div aria-live="polite" aria-atomic="true" style="position: fixed ; bottom: 0; right: 10px; z-index: 1050; min-height: 250px;">
+<!--         <div aria-live="polite" aria-atomic="true" style="position: fixed ; bottom: 0; right: 10px; z-index: 1050; min-height: 250px;">
             <div id="survey_notice" class="toast" data-autohide="false" >
               <div class="toast-header">
                 <i class="fa-regular fa-face-smile"></i>
@@ -22,15 +22,15 @@
                 Thanks!
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
         {{- partial "footer.html" . -}}
 
 
 
-<script>
+<!-- <script>
 $('#survey_notice').toast('show');
-</script>
+</script> -->
 
     </body>
 </html>
