notice to agenda + countdown

--- a/src/themes/sumo-theme/layouts/index.html
+++ b/src/themes/sumo-theme/layouts/index.html
@@ -129,18 +129,17 @@
             <img src="{{ `images/banner_2024.png` | absURL }}" style="width: 100%">
           </div>
           <div class="card-body text-center">
-            <!-- <strong id="remaining-days"></strong> days remaining -->
-            Check out the Call for Papers <a href="{{ `conference` | absURL }}">here</a>.
+            <strong id="remaining-days"></strong> days remaining
           </div>
         </div>
       </a>
 
-      <!-- <script>
+      <script>
         let conference_date = new Date('05/13/2024');
         let current_date = new Date();
         var remainingDays = Math.ceil((conference_date.getTime() - current_date.getTime()) / (1000 * 3600 * 24));
         document.getElementById("remaining-days").innerHTML = remainingDays;
-      </script> -->
+      </script>
 
     </div>
   </div>
