removing countdown from index

--- a/src/themes/sumo-theme/layouts/index.html
+++ b/src/themes/sumo-theme/layouts/index.html
@@ -123,7 +123,7 @@
         <a class="btn btn-light" href="{{ `contact` | absURL }}" aria-label="contact"><span class="fas fa-envelope"></span></a>
       </div>
 
-<a href="{{ `conference` | absURL }}" class="text-decoration-none" style="color: inherit">
+<!-- <a href="{{ `conference` | absURL }}" class="text-decoration-none" style="color: inherit">
         <div class="card">
           <div class="card-header" style="background-color: #d1d9db !important;">
             <img src="{{ `images/banner_2024.png` | absURL }}" style="width: 100%">
@@ -132,7 +132,7 @@
             <strong id="remaining-days"></strong> days remaining
           </div>
         </div>
-      </a>
+      </a> -->
 
       <script>
         let conference_date = new Date('05/13/2024');
