--- a/src/themes/sumo-theme/layouts/index.html
+++ b/src/themes/sumo-theme/layouts/index.html
@@ -290,7 +290,7 @@
       <a href="https://openmobility.eclipse.org"><image src="{{ `images/logos/openMobility-logo.svg` | absURL }}" alt="openMobility logo" style="max-width: 250px;"></image></a>
     </div>
     <div class="col-md-9" style="color: #403b3b;">
-      The future development and roadmap of SUMO is shaped and fostered by the <a href="https://openmobility.eclipse.org"><b>openMobility Working Group</b></a> at the Eclipse Foundation. 
+      The future development and roadmap of SUMO is shaped and fostered by the <a href="https://openmobility.eclipse.org"><b>openMobility Interest Group</b></a> at the Eclipse Foundation. 
         Several partners from industry and academia are working together towards a common mobility simulation platform for industrial applications and academic research.
     </div>
   </div> 
