--- a/src/themes/sumo-theme/layouts/partials/footer.html
+++ b/src/themes/sumo-theme/layouts/partials/footer.html
@@ -49,7 +49,7 @@
                       <li><a href="{{ `contact` | absURL }}">Mailing lists</a></li>
                       <li><a href="https://chat.eclipse.org/#/room/#automotive.sumo:matrix.eclipse.org">Matrix room</a></li>
                       <li><a href="{{ `conference` | absURL }}">SUMO User Conference</a></li>
-                      <li><a href="https://openmobility.eclipse.org/">openMobility Working Group</a></li>
+                      <li><a href="https://openmobility.eclipse.org/">openMobility Interest Group</a></li>
                     </ul>
                   </div>
                   <div class="col-md text-left"><b>Support & Training</b>
