reordering menu + co4e new openMobility member

--- a/src/themes/sumo-theme/layouts/index.html
+++ b/src/themes/sumo-theme/layouts/index.html
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="col-md-6"> <!-- first col -->
         <div class="page-title" style="color: #17412f;">Simulation of Urban MObility</div>
-        <br>    
+        <br>
         <p>Welcome to Eclipse <b>SUMO</b> (Simulation of Urban MObility), an open source, highly portable, microscopic and continuous multi-modal traffic simulation package designed to handle large networks.</p>
 
       <p><div class="btn-group">
@@ -21,7 +21,7 @@
     <br><a href="https://sourceforge.net/projects/sumo/files/sumo/" class="green-text"><small>Older releases <i class="fas fa-angle-right"></i></small></a></p>
 
     <a class="github-button" href="https://github.com/eclipse-sumo/sumo" data-size="large" class="btn btn-social-icon btn-lg btn-github"><span class="fab fa-github"> View on GitHub</span></a>
-    <a class="github-button" href="https://github.com/eclipse-sumo/sumo" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star eclipse/sumo on GitHub">Star</a>    
+    <a class="github-button" href="https://github.com/eclipse-sumo/sumo" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star eclipse/sumo on GitHub">Star</a>
     <a class="github-button" href="https://github.com/eclipse-sumo/sumo/fork" data-icon="octicon-repo-forked" data-size="large" data-show-count="true" aria-label="Fork eclipse/sumo on GitHub">Fork</a>
 <div class="d-md-none" style="margin-top:30px;"></div> <!-- to separate text from screenshots-->
 </div><!-- end first col -->
@@ -48,7 +48,7 @@
   var link = document.getElementById("download-button");
     link.setAttribute("href", DownloadLink);
     link.innerHTML = Name;
-</script> 
+</script>
 
 
 
@@ -94,7 +94,7 @@
     <li data-target="#sumoScreenshots" data-slide-to="6"></li>
   </ul>
         </div>
-        
+
         </div><!-- end second col -->
       </div><!-- end row -->
       <div class="svg-rounded" style="display: block; font-size: 0;">
@@ -102,7 +102,7 @@
       </div>
     </div>
   </div>
-  
+
 
 <!-- Content -->
 <div class="container" style="margin-top: 60px; margin-bottom: 60px;">
@@ -156,7 +156,7 @@
           <h2 class="section-heading">Features</h2>
         </div>
       </div>
-      
+
       <div class="row text-center"> <!-- 1 row -->
         <div class="col-md-4">
           <span class="fa-stack fa-2x">
@@ -283,27 +283,28 @@
 <!-- openMobility -->
 <div class="container-fluid text-center text-muted" style="margin-top: 60px;">
 
-  
+
 <div class="container">
   <div class="row">
     <div class="col-md-3" style="margin-top: auto; margin-bottom: auto;">
       <a href="https://openmobility.eclipse.org"><image src="{{ `images/logos/openMobility-logo.svg` | absURL }}" alt="openMobility logo" style="max-width: 250px;"></image></a>
     </div>
     <div class="col-md-9" style="color: #403b3b;">
-      The future development and roadmap of SUMO is shaped and fostered by the <a href="https://openmobility.eclipse.org"><b>openMobility Interest Group</b></a> at the Eclipse Foundation. 
-        Several partners from industry and academia are working together towards a common mobility simulation platform for industrial applications and academic research.
+      The future development and roadmap of SUMO is shaped and fostered by the <a href="https://openmobility.eclipse.org"><b>openMobility Interest Group</b></a> at the Eclipse Foundation.
+      Several partners from industry and academia are working together towards a common mobility simulation platform for industrial applications and academic research.
     </div>
-  </div> 
+  </div>
 </div>
 
 <div style="margin: 46px 0;">
-  <a href="https://www.eclipse.org/membership/showMember.php?member_id=1352"><image src="{{ `images/logos/avl-logo.png` | absURL }}" alt="AVL logo" class="member-logo"></image></a>
-  <a href="https://www.eclipse.org/membership/showMember.php?member_id=979"><image src="{{ `images/logos/bosch-logo.png` | absURL }}" alt="Bosch logo" class="member-logo"></image></a>
-  <a href="https://www.eclipse.org/membership/showMember.php?member_id=1235"><image src="{{ `images/logos/dlr-logo.png` | absURL }}" alt="DLR logo" class="member-logo"></image></a>
-  <a href="https://www.eclipse.org/membership/showMember.php?member_id=758"><image src="{{ `images/logos/fraunhofer-logo.png` | absURL }}" alt="Fraunhofer logo" class="member-logo"></image></a>
-  <a href="https://www.eclipse.org/membership/showMember.php?member_id=816"><image src="{{ `images/logos/vector-logo.png` | absURL }}" alt="Vector logo" class="member-logo"></image></a>
+  <a href="https://www.eclipse.org/membership/show-member/?member_id=1352"><image src="{{ `images/logos/avl-logo.png` | absURL }}" alt="AVL logo" class="member-logo"></image></a>
+  <a href="https://www.eclipse.org/membership/show-member/?member_id=979"><image src="{{ `images/logos/bosch-logo.png` | absURL }}" alt="Bosch logo" class="member-logo"></image></a>
+  <a href="https://www.eclipse.org/membership/show-member/?member_id=1648"><image src="{{ `images/logos/co4e-logo.png` | absURL }}" alt="co4e logo" class="member-logo"></image></a>
+  <a href="https://www.eclipse.org/membership/show-member/?member_id=1235"><image src="{{ `images/logos/dlr-logo.png` | absURL }}" alt="DLR logo" class="member-logo"></image></a>
+  <a href="https://www.eclipse.org/membership/show-member/?member_id=758"><image src="{{ `images/logos/fraunhofer-logo.png` | absURL }}" alt="Fraunhofer logo" class="member-logo"></image></a>
+  <a href="https://www.eclipse.org/membership/show-member/?member_id=816"><image src="{{ `images/logos/vector-logo.png` | absURL }}" alt="Vector logo" class="member-logo"></image></a>
 </div>
-     
+
 </div>
 <!-- /openMobility -->
 
