--- a/src/themes/sumo-theme/layouts/partials/conference_archive.html
+++ b/src/themes/sumo-theme/layouts/partials/conference_archive.html
@@ -1,5 +1,5 @@
 <!-- archive - previous years -->
-<p class="sidebar-title"><b>Archive</b></p>
+<p class="sidebar-title"><b>Conference Archive</b></p>
 <div class="btn-group">
     <div class="dropdown">
     <button type="button" class="btn btn-light btn-archive btn-sm dropdown-toggle" data-toggle="dropdown" title="Explore previous conferences">Select year </button>
