--- a/src/themes/sumo-theme/static/css/custom.css
+++ b/src/themes/sumo-theme/static/css/custom.css
@@ -33,8 +33,8 @@ border: white;
 }
 
 .carousel-indicators li {
-width: 10px;
-height: 10px;
+width: 6px;
+height: 6px;
 border-radius: 100%;
 }
 
@@ -360,7 +360,8 @@ font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helve
 }
 
 .page-section {
-padding: 60px;
+padding-top: 80px;
+padding-bottom: 80px;
 }
 
 .sidebar-title {
