new 2025 conference page added

--- a/src/themes/sumo-theme/layouts/index.html
+++ b/src/themes/sumo-theme/layouts/index.html
@@ -140,6 +140,14 @@
         <a href="{{ `about#citing-sumo` | relURL }}">Citing SUMO</a>
       </div>
 
+      <a href="{{ `conference` | absURL }}" style="text-decoration: none;">
+      <div class="alert alert-success mt-4" role="alert">
+        <h5 class="alert-heading">Save the date!</h5>
+
+        SUMO User Conference 2025: <b>May 12-14</b> in Berlin.
+      </div>
+    </a>
+
 <!-- <a href="{{ `conference` | absURL }}" class="text-decoration-none" style="color: inherit">
         <div class="card">
           <div class="card-header" style="background-color: #d1d9db !important;">
