making the DOI badge dynamic

--- a/src/themes/sumo-theme/layouts/index.html
+++ b/src/themes/sumo-theme/layouts/index.html
@@ -97,7 +97,7 @@
 
         </div><!-- end second col -->
         <div class="col" style="margin-top: 60px;">
-          <a href="https://doi.org/10.5281/zenodo.13907886"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.13907886.svg" alt="DOI"></a>
+          <a href="https://doi.org/{{ $.Site.Params.DOI }}"><img src="https://zenodo.org/badge/DOI/{{ $.Site.Params.DOI }}.svg"></a>
           <a href="https://github.com/eclipse-sumo/sumo/actions/workflows/build-linux.yml"><img src="https://github.com/eclipse-sumo/sumo/actions/workflows/build-linux.yml/badge.svg" alt="GitHub Linux Workflow build status"></a>
           <a href="https://github.com/eclipse-sumo/sumo/actions/workflows/build-windows.yml"><img src="https://github.com/eclipse-sumo/sumo/actions/workflows/build-windows.yml/badge.svg" alt="GitHub Windows Workflow build status"></a>
           <a href="https://github.com/eclipse-sumo/sumo/actions/workflows/build-macos.yml"><img src="https://github.com/eclipse-sumo/sumo/actions/workflows/build-macos.yml/badge.svg" alt="GitHub MacOS Workflow build status"></a>
