--- a/src/themes/sumo-theme/layouts/_default/single.html
+++ b/src/themes/sumo-theme/layouts/_default/single.html
@@ -27,7 +27,7 @@
     {{ end }}
     
     {{ if isset .Params "conference-page" }}
-    <small><i>This page was last edited on: {{ .Lastmod.Format "January 2, 2006 at 3:04 PM UTC" }}</i></small>
+    <small><i>This page was last edited on: {{ .Lastmod.Format "January 2, 2006 at 3:04 PM" }}</i></small>
     {{ end }}
     
     {{ if isset .Site.Params "githubediturl" }}
