--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -143,9 +143,11 @@
 
       <a href="{{ `conference` | absURL }}" style="text-decoration: none;">
       <div class="alert alert-success mt-4" role="alert">
-        <h5 class="alert-heading">Save the date!</h5>
+        <h5 class="alert-heading">Call for Papers</h5>
 
         SUMO User Conference 2025: <b>May 12-14</b> in Berlin.
+<br><br>
+        Read the call for papers, and keep in mind the important dates.
       </div>
     </a>
 
