adding the 2025 conference logo

--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -143,11 +143,12 @@
 
       <a href="{{ `conference` | absURL }}" style="text-decoration: none;">
       <div class="alert alert-success mt-4" role="alert">
+        <center><img src="{{ `images/logo_2025.png` | absURL }}" style="width:80%; margin-bottom:10px" alt="Conference logo" class="img-responsive"/></center>
         <h5 class="alert-heading">Call for Papers</h5>
 
         SUMO User Conference 2025: <b>May 12-14</b> in Berlin.
 <br><br>
-        Read the call for papers, and keep in mind the important dates.
+        Don't miss the important dates!
       </div>
     </a>
 
