adding link to threads

--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -138,6 +138,7 @@
         <a class="btn btn-light" href="https://twitter.com/eclipsesumo" aria-label="X"><span class="fab fa-x-twitter"></span></a>
         <a class="btn btn-light" href="https://facebook.com/simulationofurbanmobility" aria-label="Facebook"><span class="fab fa-facebook"></span></a>
         <a class="btn btn-light" href="https://instagram.com/eclipse.sumo" aria-label="Instagram"><span class="fab fa-instagram"></span></a>
+        <a class="btn btn-light" href="https://www.threads.net/@eclipse.sumo" aria-label="Instagram"><span class="fab fa-threads"></span></a>
         <a class="btn btn-light" href="https://chat.eclipse.org/#/room/#automotive.sumo:matrix.eclipse.org" aria-label="Matrix"><span class="fas fa-comments"></span></a>
         <a class="btn btn-light" href="{{ `contact` | absURL }}" aria-label="contact"><span class="fas fa-envelope"></span></a>
       </div>
