--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -122,11 +122,11 @@
 <div class="container" style="margin-top: 60px; margin-bottom: 60px;">
 
   <div class="row">
-    <div class="col-12" >
+<!--     <div class="col-12" >
       <div class="alert alert-warning" role="alert">
-        We are extending the paper submission deadline to Sunday, February 23, 2025 at 23:59 CET.
+        Test
       </div>
-  </div>
+    </div> -->
     <div class="col-md-8 text-justify" >
         {{ .Content }}
     </div>
@@ -151,7 +151,6 @@
       <div class="alert alert-success mt-4" role="alert">
         <a href="{{ `conference` | absURL }}" style="text-decoration: none;">
         <center><img src="{{ `images/logo_2025.png` | absURL }}" style="width:80%; margin-bottom:10px" alt="Conference logo" class="img-responsive"/></center>
-        <h5 class="alert-heading">Call for Papers</h5>
 
         SUMO User Conference 2025: <b>May 12-14</b> in Berlin.</a>
 <br><br>
