adding Transcality to the openMobility logos

--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -360,6 +360,7 @@ Registration is now open: <a href="https://sumo2025.welcome-manager.de/">https:/
   <a href="https://www.eclipse.org/membership/show-member/?member_id=1648"><image src="{{ `images/logos/co4e-logo.png` | absURL }}" alt="co4e logo" class="member-logo"></image></a>
   <a href="https://www.eclipse.org/membership/show-member/?member_id=1235"><image src="{{ `images/logos/dlr-logo.png` | absURL }}" alt="DLR logo" class="member-logo"></image></a>
   <a href="https://www.eclipse.org/membership/show-member/?member_id=758"><image src="{{ `images/logos/fraunhofer-logo.png` | absURL }}" alt="Fraunhofer logo" class="member-logo"></image></a>
+  <a href="https://www.eclipse.org/membership/show-member/?member_id=1729"><image src="{{ `images/logos/transcality-logo.png` | absURL }}" alt="Transcality logo" class="member-logo"></image></a>
   <a href="https://www.eclipse.org/membership/show-member/?member_id=816"><image src="{{ `images/logos/vector-logo.png` | absURL }}" alt="Vector logo" class="member-logo"></image></a>
 </div>
 
