--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -315,6 +315,7 @@ Registration is now open: <a href="https://sumo2025.welcome-manager.de/">https:/
   </section>
   <!-- /Features -->
 
+<!-- Conference -->
   <section class="page-section" id="community" style="background: #EBEBEB;">
     <div class="container">
       <div class="row">
@@ -336,6 +337,7 @@ Registration is now open: <a href="https://sumo2025.welcome-manager.de/">https:/
       </div>
     </div>
   </section>
+<!-- Conference -->
 
 <!-- openMobility -->
 <section class="page-section" id="openMobility">
