--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -153,10 +153,6 @@
         <center><img src="{{ `images/logo_2025.png` | absURL }}" style="width:80%; margin-bottom:10px" alt="Conference logo" class="img-responsive"/></center>
 
         SUMO User Conference 2025: <b>May 12-14</b> in Berlin.</a>
-<br><br>
-Registration is now open: <a href="https://sumo2025.welcome-manager.de/">https://sumo2025.welcome-manager.de/</a>
-<br>
-<small><b>Please keep in mind that the registration will close on April 30, 2025 (at 23:59 CEST).</b></small>
       </div>
     
 
@@ -314,6 +310,42 @@ Registration is now open: <a href="https://sumo2025.welcome-manager.de/">https:/
     </div>
   </section>
   <!-- /Features -->
+
+<!-- Logos -->
+ <!--
+<section class="page-section" id="logos">
+<div class="container-fluid text-center text-muted">
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12 text-center">
+      <h2 class="section-heading">Trusted by</h2>
+    </div>
+  </div>
+</div>
+
+<div style="margin: 46px 0;">
+  <a href="https://ati.ua.edu/" target="_blank"><image src="{{ `images/logos/trusted/ATI.png` | absURL }}" alt="" class="member-logo"></image></a>
+  <a href="https://www.bosch.com/" target="_blank"><image src="{{ `images/logos/trusted/bosch-logo.png` | absURL }}" alt="" class="member-logo"></image></a>
+  <a href="https://www.bwb.de/" target="_blank"><image src="{{ `images/logos/trusted/bwb.png` | absURL }}" alt="" class="member-logo"></image></a>
+  <a href="https://www.co4e.com/" target="_blank"><image src="{{ `images/logos/trusted/co4e.png` | absURL }}" alt="" class="member-logo"></image></a>
+  <a href="https://www.dlr.de/" target="_blank"><image src="{{ `images/logos/trusted/dlr_logo.svg` | absURL }}" alt="" class="member-logo"></image></a>
+  <a href="https://www.eraneos.com/" target="_blank"><image src="{{ `images/logos/trusted/eraneos.png` | absURL }}" alt="" class="member-logo"></image></a>
+  <a href="https://www.fokus.fraunhofer.de/" target="_blank"><image src="{{ `images/logos/trusted/Fokus.png` | absURL }}" alt="" class="member-logo"></image></a>
+  <a href="https://www.fz-juelich.de/en/ias/ias-7" target="_blank"><image src="{{ `images/logos/trusted/FZJ-IAS-7.png` | absURL }}" alt="FZJ-IAS-7" class="member-logo"></image></a>
+  <a href="https://www.imet.gr/" target="_blank"><image src="{{ `images/logos/trusted/HIT.png` | absURL }}" alt="" class="member-logo"></image></a>
+  <a href="https://www.notraffic.com/" target="_blank"><image src="{{ `images/logos/trusted/NoTraffic.png` | absURL }}" alt="NoTraffic" class="member-logo"></image></a>
+  <a href="https://transcality.com/" target="_blank"><image src="{{ `images/logos/trusted/Transcality.png` | absURL }}" alt="" class="member-logo"></image></a>
+  <a href="https://www.tu-braunschweig.de/" target="_blank"><image src="{{ `images/logos/trusted/TUBraunschweig.jpg` | absURL }}" alt="" class="member-logo"></image></a>
+  <a href="https://www.virtual-vehicle.at/" target="_blank"><image src="{{ `images/logos/trusted/VIRTUAL-VEHICLE.jpg` | absURL }}" alt="" class="member-logo"></image></a>
+  <a href="https://7p-mobility.com/" target="_blank"><image src="{{ `images/logos/trusted/7P.png` | absURL }}" alt="7P" class="member-logo"></image></a>
+</div>
+
+</div>
+</section>
+-->
+<!-- /Logos -->
 
 <!-- Conference -->
   <section class="page-section" id="community" style="background: #EBEBEB;">
