--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -148,12 +148,12 @@
       </div>
 
       
-      <div class="alert alert-success mt-4" role="alert">
+<!--       <div class="alert alert-success mt-4" role="alert">
         <a href="{{ `conference` | absURL }}" style="text-decoration: none;">
         <center><img src="{{ `images/logo_2025.png` | absURL }}" style="width:80%; margin-bottom:10px" alt="Conference logo" class="img-responsive"/></center>
 
         SUMO User Conference 2025: <b>May 12-14</b> in Berlin.</a>
-      </div>
+      </div> -->
     
 
 <!-- <a href="{{ `conference` | absURL }}" class="text-decoration-none" style="color: inherit">
