adding the 2025 videos and archive page

--- a/themes/sumo-theme/layouts/partials/conference_archive.html
+++ b/themes/sumo-theme/layouts/partials/conference_archive.html
@@ -5,6 +5,7 @@
     <button type="button" class="btn btn-light btn-archive btn-sm dropdown-toggle" data-toggle="dropdown" title="Explore previous conferences">Select year </button>
         <div class="dropdown-menu text-center">
             <a class="dropdown-item" href="{{ `conference` | absURL }}">Current conference <i class="fas fa-angle-double-right"></i></a>
+            <a class="dropdown-item" href="{{ `2025` | absURL }}">2025</a>
             <a class="dropdown-item" href="{{ `2024` | absURL }}">2024</a>
             <a class="dropdown-item" href="{{ `2023` | absURL }}">2023</a>
             <a class="dropdown-item" href="{{ `2022` | absURL }}">2022</a>
