adding user logos

--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -312,7 +312,7 @@
   <!-- /Features -->
 
 <!-- Logos -->
- <!--
+
 <section class="page-section" id="logos">
 <div class="container-fluid text-center text-muted">
 
@@ -323,28 +323,36 @@
       <h2 class="section-heading">Trusted by</h2>
     </div>
   </div>
-</div>
 
-<div style="margin: 46px 0;">
-  <a href="https://ati.ua.edu/" target="_blank"><image src="{{ `images/logos/trusted/ATI.png` | absURL }}" alt="" class="member-logo"></image></a>
-  <a href="https://www.bosch.com/" target="_blank"><image src="{{ `images/logos/trusted/bosch-logo.png` | absURL }}" alt="" class="member-logo"></image></a>
-  <a href="https://www.bwb.de/" target="_blank"><image src="{{ `images/logos/trusted/bwb.png` | absURL }}" alt="" class="member-logo"></image></a>
-  <a href="https://www.co4e.com/" target="_blank"><image src="{{ `images/logos/trusted/co4e.png` | absURL }}" alt="" class="member-logo"></image></a>
-  <a href="https://www.dlr.de/" target="_blank"><image src="{{ `images/logos/trusted/dlr_logo.svg` | absURL }}" alt="" class="member-logo"></image></a>
-  <a href="https://www.eraneos.com/" target="_blank"><image src="{{ `images/logos/trusted/eraneos.png` | absURL }}" alt="" class="member-logo"></image></a>
-  <a href="https://www.fokus.fraunhofer.de/" target="_blank"><image src="{{ `images/logos/trusted/Fokus.png` | absURL }}" alt="" class="member-logo"></image></a>
-  <a href="https://www.fz-juelich.de/en/ias/ias-7" target="_blank"><image src="{{ `images/logos/trusted/FZJ-IAS-7.png` | absURL }}" alt="FZJ-IAS-7" class="member-logo"></image></a>
-  <a href="https://www.imet.gr/" target="_blank"><image src="{{ `images/logos/trusted/HIT.png` | absURL }}" alt="" class="member-logo"></image></a>
-  <a href="https://www.notraffic.com/" target="_blank"><image src="{{ `images/logos/trusted/NoTraffic.png` | absURL }}" alt="NoTraffic" class="member-logo"></image></a>
-  <a href="https://transcality.com/" target="_blank"><image src="{{ `images/logos/trusted/Transcality.png` | absURL }}" alt="" class="member-logo"></image></a>
-  <a href="https://www.tu-braunschweig.de/" target="_blank"><image src="{{ `images/logos/trusted/TUBraunschweig.jpg` | absURL }}" alt="" class="member-logo"></image></a>
-  <a href="https://www.virtual-vehicle.at/" target="_blank"><image src="{{ `images/logos/trusted/VIRTUAL-VEHICLE.jpg` | absURL }}" alt="" class="member-logo"></image></a>
-  <a href="https://7p-mobility.com/" target="_blank"><image src="{{ `images/logos/trusted/7P.png` | absURL }}" alt="7P" class="member-logo"></image></a>
+
+<div class="logo-container">
+  <a href="https://ati.ua.edu/" target="_blank"><image src="{{ `images/logos/ATI.png` | absURL }}" alt="Alabama Transportation Institute" class="user-logo"></image></a>
+  <a href="https://www.avl.com/" target="_blank"><image src="{{ `images/logos/avl-logo.png` | absURL }}" alt="AVL" class="user-logo"></image></a>
+  <a href="https://www.bwb.de/" target="_blank"><image src="{{ `images/logos/bwb.png` | absURL }}" alt="Berliner Wasserbetriebe" class="user-logo"></image></a>
+  <a href="https://www.bosch.com/" target="_blank"><image src="{{ `images/logos/bosch-logo.png` | absURL }}" alt="Bosch" class="user-logo"></image></a>
+  <a href="https://www.co4e.com/" target="_blank"><image src="{{ `images/logos/co4e.png` | absURL }}" alt="co4e GmbH" class="user-logo"></image></a>
+  <a href="https://www.dlr.de/" target="_blank"><image src="{{ `images/logos/dlr_logo.svg` | absURL }}" alt="DLR" class="user-logo"></image></a>
+  <a href="https://www.eraneos.com/" target="_blank"><image src="{{ `images/logos/eraneos.png` | absURL }}" alt="Eraneos" class="user-logo"></image></a>
+  <a href="https://www.fokus.fraunhofer.de/" target="_blank"><image src="{{ `images/logos/Fokus.png` | absURL }}" alt="Fraunhofer FOKUS" class="user-logo"></image></a>
+  <a href="https://www.fz-juelich.de/en/ias/ias-7/" target="_blank"><image src="{{ `images/logos/FZJ-IAS-7.png` | absURL }}" alt="FZJ-IAS-7" class="user-logo"></image></a>
+  <a href="https://www.imet.gr/" target="_blank"><image src="{{ `images/logos/HIT.png` | absURL }}" alt="Hellenic Institute of Transport" class="user-logo"></image></a>
+  <a href="https://www.joinville.sc.gov.br/institucional/sepur/" target="_blank"><image src="{{ `images/logos/Logotipo_Prefeitura_horizontal_positivo.png` | absURL }}" alt="City of Joinville" class="user-logo"></image></a>
+  <a href="https://www.notraffic.com/" target="_blank"><image src="{{ `images/logos/notraffic_logo.svg` | absURL }}" alt="NoTraffic" class="user-logo"></image></a>
+  <a href="https://7p-mobility.com/" target="_blank"><image src="{{ `images/logos/7P.png` | absURL }}" alt="Seven Principles Mobility" class="user-logo"></image></a>
+  <a href="https://www.tu-braunschweig.de/" target="_blank"><image src="{{ `images/logos/TUBraunschweig.jpg` | absURL }}" alt="Technische Universität Braunschweig" class="user-logo"></image></a>
+  <a href="https://transcality.com/" target="_blank"><image src="{{ `images/logos/Transcality.png` | absURL }}" alt="Transcality" class="user-logo"></image></a>
+  <a href="https://www.vector.com/" target="_blank"><image src="{{ `images/logos/vector-logo.png` | absURL }}" alt="Vector" class="user-logo"></image></a>
+  <a href="https://www.virtual-vehicle.at/" target="_blank"><image src="{{ `images/logos/virtual-vehicle.svg` | absURL }}" alt="Virtual Vehicle Research GmbH" class="user-logo"></image></a>
+  <div class="d-flex align-items-center"><i>+ Many more</i></div>
+</div>
+<div class="mt-2">
+  <small>Is your Institution using SUMO? <a href="{{ `contact` | absURL }}#project-leads">Contact us!</a></small>
+</div>
 </div>
 
 </div>
 </section>
--->
+
 <!-- /Logos -->
 
 <!-- Conference -->
@@ -386,16 +394,6 @@
       Several partners from industry and academia are working together towards a common mobility simulation platform for industrial applications and academic research.
     </div>
   </div>
-</div>
-
-<div style="margin: 46px 0;">
-  <a href="https://www.eclipse.org/membership/show-member/?member_id=1352"><image src="{{ `images/logos/avl-logo.png` | absURL }}" alt="AVL logo" class="member-logo"></image></a>
-  <a href="https://www.eclipse.org/membership/show-member/?member_id=979"><image src="{{ `images/logos/bosch-logo.png` | absURL }}" alt="Bosch logo" class="member-logo"></image></a>
-  <a href="https://www.eclipse.org/membership/show-member/?member_id=1648"><image src="{{ `images/logos/co4e-logo.png` | absURL }}" alt="co4e logo" class="member-logo"></image></a>
-  <a href="https://www.eclipse.org/membership/show-member/?member_id=1235"><image src="{{ `images/logos/dlr-logo.png` | absURL }}" alt="DLR logo" class="member-logo"></image></a>
-  <a href="https://www.eclipse.org/membership/show-member/?member_id=758"><image src="{{ `images/logos/fraunhofer-logo.png` | absURL }}" alt="Fraunhofer logo" class="member-logo"></image></a>
-  <a href="https://www.eclipse.org/membership/show-member/?member_id=1729"><image src="{{ `images/logos/transcality-logo.png` | absURL }}" alt="Transcality logo" class="member-logo"></image></a>
-  <a href="https://www.eclipse.org/membership/show-member/?member_id=816"><image src="{{ `images/logos/vector-logo.png` | absURL }}" alt="Vector logo" class="member-logo"></image></a>
 </div>
 
 </div>
