--- a/themes/sumo-theme/static/css/custom.css
+++ b/themes/sumo-theme/static/css/custom.css
@@ -105,9 +105,22 @@ margin: 0 10px;
 border-radius: 0 !important;
 }
 
-.member-logo {
-height: 45px;
-margin: 10px 30px !important;
+#logos {
+background-color: #fff;
+}
+
+.user-logo {
+width: 200px;
+height: 150px;
+object-fit: contain;
+margin: 0 20px;
+}
+
+.logo-container {
+display: flex;
+flex-wrap: wrap;
+justify-content: center;
+gap: 50px;
 }
 
 .contact-div {
