--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -333,6 +333,7 @@
   <a href="https://www.co4e.com/" target="_blank"><image src="{{ `images/logos/co4e.png` | absURL }}" alt="co4e GmbH" class="user-logo"></image></a>
   <a href="https://www.dlr.de/" target="_blank"><image src="{{ `images/logos/dlr_logo.svg` | absURL }}" alt="DLR" class="user-logo"></image></a>
   <a href="https://www.eraneos.com/" target="_blank"><image src="{{ `images/logos/eraneos.png` | absURL }}" alt="Eraneos" class="user-logo"></image></a>
+  <a href="https://www.fkfs.de/" target="_blank"><image src="{{ `images/logos/FKFS.png` | absURL }}" alt="Forschungsinstitut für Kraftfahrwesen und Fahrzeugmotoren Stuttgart" class="user-logo"></image></a>
   <a href="https://www.fokus.fraunhofer.de/" target="_blank"><image src="{{ `images/logos/Fokus.png` | absURL }}" alt="Fraunhofer FOKUS" class="user-logo"></image></a>
   <a href="https://www.fz-juelich.de/en/ias/ias-7/" target="_blank"><image src="{{ `images/logos/FZJ-IAS-7.png` | absURL }}" alt="FZJ-IAS-7" class="user-logo"></image></a>
   <a href="https://www.imet.gr/" target="_blank"><image src="{{ `images/logos/HIT.png` | absURL }}" alt="Hellenic Institute of Transport" class="user-logo"></image></a>
