--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -340,6 +340,7 @@
   <a href="https://www.imet.gr/" target="_blank"><image src="{{ `images/logos/HIT.png` | absURL }}" alt="Hellenic Institute of Transport" class="user-logo"></image></a>
   <a href="https://www.infrest.de/" target="_blank"><image src="{{ `images/logos/infrest.png` | absURL }}" alt="infrest - Infrastruktur eStrasse GmbH" class="user-logo"></image></a>
   <a href="https://www.joinville.sc.gov.br/institucional/sepur/" target="_blank"><image src="{{ `images/logos/Logotipo_Prefeitura_horizontal_positivo.png` | absURL }}" alt="City of Joinville" class="user-logo"></image></a>
+  <a href="https://www.nec.com/" target="_blank"><image src="{{ `images/logos/NEC.svg` | absURL }}" alt="NEC" class="user-logo"></image></a>
   <a href="https://www.notraffic.com/" target="_blank"><image src="{{ `images/logos/notraffic_logo.svg` | absURL }}" alt="NoTraffic" class="user-logo"></image></a>
   <a href="https://7p-mobility.com/" target="_blank"><image src="{{ `images/logos/7P.png` | absURL }}" alt="Seven Principles Mobility" class="user-logo"></image></a>
   <a href="https://www.tu-braunschweig.de/" target="_blank"><image src="{{ `images/logos/TUBraunschweig.jpg` | absURL }}" alt="Technische Universität Braunschweig" class="user-logo"></image></a>
